--- a/Client_CookBookApp/Client_CookBookApp.csproj
+++ b/Client_CookBookApp/Client_CookBookApp.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CommonData\CommonData.csproj" />
+    <ProjectReference Include="..\ServerCommonData\ServerCommonData.csproj" />
   </ItemGroup>
 
 </Project>
