!(CommonData): Подключение сервера к БД

--- a/TestPrj/TestPrj.csproj
+++ b/TestPrj/TestPrj.csproj
@@ -8,11 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CommonData\CommonData.csproj" />
+    <ProjectReference Include="..\ServerCommonData\ServerCommonData.csproj" />
   </ItemGroup>
 
 </Project>
